<resources>
    <string name="app_name">Makmur Mandiri</string>
    <string name="action_settings">Settings</string>
    <string name="all_items_list">All Items</string>
    <string name="categories">Categories (COMING SOON)</string>
    <string name="test_a">TEST STRING A</string>
    <string name="buttonAB_title">Ayam Brand</string>
    <string name="AB_all_items">Ayam Brand</string>
    <string name="AB_weight_24_425">425 g/24</string>
    <string name="AB_weight_24_160">160 g/24</string>
    <string name="AB_weight_24_420">420 g/24</string>
    <string name="AB_cat_tuna">Tuna</string>
    <string name="AB_cat_salmon">Salmon</string>
    <string name="AB_cat_mackarel">Makarel</string>
    <string name="AB_cat_sardines">Sarden</string>
    <string name="AB_cat_santan">Santan</string>
    <string name="AB_cat_veggies">Sayur-sayuran</string>
    <string name="AB_cat_fruits">Buah-buahan</string>
    <string name="AB_cat_crab">Kepiting</string>
    <string name="AB_tuna_nav">Ayam Brand > Tuna</string>
    <string name="AB_tuna_weight">185 g/24</string>
    <string name="AB_tuna_price">496.100/20.671</string>
    <string name="AB_tuna_chunk_in_oil">Chunk in Oil</string>
    <string name="AB_tuna_chunk_in_oil_label">Ayam Brand Tuna Chunk in Oil</string>
    <string name="AB_tuna_flakes_in_oil">Flakes in Oil</string>
    <string name="AB_tuna_flakes_in_oil_label">Ayam Brand Tuna Flakes in Oil</string>
    <string name="AB_tuna_chunk_in_olive_oil">Chunk in Olive Oil</string>
    <string name="AB_tuna_chunk_in_olive_oil_label">Ayam Brand Tuna Chunk in Olive Oil</string>
    <string name="AB_tuna_sandwich">Tuna Sandwich</string>
    <string name="AB_tuna_sandwich_label">Ayam Brand Sandwich Tuna Flakes in Oil Light</string>
    <string name="AB_tuna_chunk_in_brine">Chunk In Brine</string>
    <string name="AB_tuna_chunk_in_brine_label">Ayam Brand Tuna Chunk In Brine</string>
    <string name="AB_tuna_flakes_light">Flakes in Water</string>
    <string name="AB_tuna_flakes_light_label">Ayam Brand Tuna Flakes in Water Light</string>
    <string name="AB_tuna_cabe">Tuna Cabe</string>
    <string name="AB_tuna_cabe_label">Ayam Brand Tuna Cabe</string>
    <string name="AB_tuna_curry">Tuna Kari</string>
    <string name="AB_tuna_curry_label">Ayam Brand Tuna Kari</string>
    <string name="AB_tuna_spicy_tomato">Tomat Pedas</string>
    <string name="AB_tuna_spicy_tomato_label">Ayam Brand Tuna Tomat Pedas</string>
    <string name="AB_tuna_mayo_natural">Mayo Natural</string>
    <string name="AB_tuna_mayo_natural_label">Ayam Brand Tuna Mayonnaise Natural </string>
    <string name="AB_tuna_mayo_mild">Mayo Sedang</string>
    <string name="AB_tuna_mayo_mild_label">Ayam Brand Tuna Mayonnaise Sedang</string>
    <string name="AB_tuna_mayo_hot">Mayo Pedas</string>
    <string name="AB_tuna_mayo_hot_label">Ayam Brand Tuna Mayonnaise Pedas</string>
    <string name="AB_tuna_spread">Tuna Spread</string>
    <string name="AB_tuna_spread_label">Ayam Brand Tuna Spread</string>
    <string name="AB_salmon_nav">Ayam Brand > Salmon</string>
    <string name="AB_salmon">Salmon Spread</string>
    <string name="AB_salmon_label">Ayam Brand Salmon Spread</string>
    <string name="AB_salmon_weight">170 g/24</string>
    <string name="AB_salmon_price">496.100/20.671</string>
    <string name="AB_mackerel_nav">Ayam Brand > Mackerel</string>
    <string name="AB_mackerel_ori">Makarel Tomat</string>
    <string name="AB_mackerel_ori_label">Ayam Brand Makarel Dalam Saus Tomat</string>
    <string name="AB_mackerel_ori_weight">Tall: 425gr/24\nBuffet: 230gr/48\nJitney : 115gr/60</string>
    <string name="AB_mackerel_ori_price">Tall: 611.100/25.461\nBuffet: 794.800/16.558\nJitney: 686.400/11.440</string>
    <string name="AB_mackerel_fried">Fried Mackerel</string>
    <string name="AB_mackerel_fried_label">Ayam Brand Makarel Goreng</string>
    <string name="AB_mackerel_fried_weight">115gr/50</string>
    <string name="AB_mackerel_fried_price">700.700/14.014</string>
    <string name="AB_mackerel_spicy">Spicy Mackerel</string>
    <string name="AB_mackerel_spicy_label">Ayam Brand Makarel Pedas</string>
    <string name="AB_mackerel_spicy_weight">425gr/24</string>
    <string name="AB_mackerel_spicy_price">611.100/25.461</string>
    <string name="AB_mackerel_padang">Saus Padang</string>
    <string name="AB_mackerel_padang_label">Ayam Brand Makarel Saus Padang</string>
    <string name="AB_mackerel_padang_weight">425gr/24</string>
    <string name="AB_mackerel_padang_price">611.100/25.461</string>
    <string name="AB_sardine_nav">Ayam Brand > Sardines</string>
    <string name="AB_sardine_oval">Sarden Oval</string>
    <string name="AB_sardine_oval_label">Ayam Brand Sarden Oval Dalam Tomat</string>
    <string name="AB_sardine_oval_weight">Kecil: 215 gr/48\nBesar: 425 gr/24</string>
    <string name="AB_sardine_oval_price">Kecil: 972.400/20.259\nBesar: 881.100/36.713</string>
    <string name="AB_sardine_tall">Sarden Kaleng</string>
    <string name="AB_sardine_tall_label">Ayam Brand Sarden Kaleng Dalam Tomat</string>
    <string name="AB_sardine_tall_weight">Tall: 425 gr/24\nJitney: 155 gr/60\nBuffet: 230 gr/48</string>
    <string name="AB_sardine_tall_price">Tall: 589.000/24.544\nJitney: 662.200/11.037\nBuffet: 776.700/15.973</string>
    <string name="AB_veggies_nav">Ayam Brand > Sayur-sayuran</string>
    <string name="AB_baked_beans">Baked Beans</string>
    <string name="AB_baked_beans_label">Ayam Brand Baked Beans Dalam Saos Tomat</string>
    <string name="AB_baked_beans_price">Tall: 317.900/13.246\nBuffet: 363.000/7.563</string>
    <string name="AB_baked_beans_light">Baked Beans Light</string>
    <string name="AB_baked_beans_light_label">Ayam Brand Baked Beans Light</string>
    <string name="AB_baked_beans_light_price">317.900/13.246</string>
    <string name="AB_baked_beans_cheese">Baked Beans Cheese</string>
    <string name="AB_baked_beans_cheese_label">Ayam Brand Baked Beans Dengan Keju Parmesan</string>
    <string name="AB_baked_beans_cheese_price">317.900/13.246</string>
    <string name="AB_tomato_puree">Tomato Puree</string>
    <string name="AB_tomato_puree_label">Ayam Brand Tomato Puree</string>
    <string name="AB_tomato_puree_price">Tall: 412.500/17.188\nJitney: 205.150/8.548</string>
    <string name="AB_processed_peas">Polong</string>
    <string name="AB_processed_peas_label">Ayam Brand Kacang Polong</string>
    <string name="AB_processed_peas_price">316.800/13.200</string>
    <string name="AB_sweet_corn">Sweet Corn</string>
    <string name="AB_sweet_corn_label">Ayam Brand Sweet Corn Cream Style</string>
    <string name="AB_sweet_corn_price">280.500/11.688</string>
    <string name="AB_whole_kernel">Whole Kernel</string>
    <string name="AB_whole_kernel_label">Ayam Brand Jagung Pipil Utuh Dalam Air</string>
    <string name="AB_whole_kernel_price">280.500/11.688</string>
    <string name="AB_whole_mushroom">Whole Mushroom</string>
    <string name="AB_whole_mushroom_label">Ayam Brand Jamur Utuh Dalam Air Garam</string>
    <string name="AB_whole_mushroom_price">386.650/16.111</string>
    <string name="AB_santan_nav">Ayam Brand > Santan</string>
    <string name="AB_santan">Santan</string>
    <string name="AB_santan_label">Ayam Brand Santan</string>
    <string name="AB_santan_weight">S: 200mL/24\nL: 1L/12</string>
    <string name="AB_santan_price">S: 192.504/8.021\nL: 374.004/31.167</string>
    <string name="AB_crabmeat_nav">Ayam Brand > Kepiting</string>
    <string name="AB_crabmeat">Kepiting</string>
    <string name="AB_crabmeat_label">AB Kepiting Suir</string>
    <string name="AB_crabmeat_weight">170 g/24</string>
    <string name="AB_crabmeat_price">654.500/27.271</string>
    <string name="AB_fruit_nav">Ayam Brand > Buah-buahan</string>
    <string name="AB_fruit_cocktail">Fruit Cocktail</string>
    <string name="AB_fruit_cocktail_label">Ayam Brand Fruit Cocktail</string>
    <string name="AB_fruit_cocktail_weight">565 g/24</string>
    <string name="AB_fruit_cocktail_price">488.400/20.350</string>
    <string name="AB_fruit_pineapple">Nanas</string>
    <string name="AB_fruit_pineapple_label">AB Nanas Potong Bulat</string>
    <string name="AB_fruit_pineapple_weight">565 g/24</string>
    <string name="AB_fruit_pineapple_price">451.500/18.815</string>
    <string name="Jays_title">Jay\'s Spices</string>
    <string name="Gryphon_title">Gryphon Tea</string>
    <string name="Barilla_title">Barilla</string>
    <string name="Bertolli_title">Bertolli</string>
    <string name="Savis_title">Savis Tea</string>
    <string name="Savis_all_items">All Items List</string>
    <string name="Savis_classic_title">Classic</string>
    <string name="Savis_fruit_title">Fruit</string>
    <string name="Savis_aromatic_title">Aromatic</string>
    <string name="Savis_herb_title">Herbs and Spices</string>
    <string name="Savis_flower_title">Flower</string>
    <string name="Savis_organic_title">Organic</string>
    <string name="Savis_japanese_title">Japanese</string>
    <string name="Savis_loose_classic_earl">Earl Grey</string>
    <string name="Savis_loose_classic_java">Java O.P.</string>
    <string name="Savis_loose_classic_jewel">Jewel of East</string>
    <string name="Savis_loose_classic_silver">Silver Tips</string>
    <string name="Savis_loose_classic_sumatra">Sumatra Oolong</string>
    <string name="Savis_loose_aromatic_lemongrass">Lemongrass Tea</string>
    <string name="Savis_loose_aromatic_moroccan">Moroccan Mint</string>
    <string name="Savis_loose_aromatic_pandanus">Pandanus</string>
    <string name="Savis_loose_aromatic_royal">Royal Princess</string>
    <string name="Savis_loose_aromatic_sekar">Sekar Kedaton</string>
    <string name="Savis_loose_herb_chocolate">Chocolate Black Tea</string>
    <string name="Savis_loose_herb_exotic">Exotic Especia</string>
    <string name="Savis_loose_herb_java">Java Ginger</string>
    <string name="Savis_loose_herb_peppermint">Peppermint</string>
    <string name="Savis_loose_flower_bunaken">Bunaken Blue Tea</string>
    <string name="Savis_loose_flower_chamomile">Chamomile Dream (Organic)</string>
    <string name="Savis_loose_flower_rose">Rose Tea</string>
    <string name="Savis_loose_organic_green">Halimun Green Tea</string>
    <string name="Savis_loose_organic_oolong">Halimun Oolong Tea</string>
    <string name="Savis_loose_organic_red">Halimun Red Tea</string>
    <string name="Savis_loose_fruit_senggigi">Senggigi Blissberry</string>
    <string name="Savis_loose_japanese_matcha">Geinmatcha</string>
    <string name="Spigadoro_title">Spigadoro</string>
    <string name="Lily_title">Lily Flower</string>
    <string name="GoldenBridge_title">Golden Bridge</string>
    <string name="Corniche_title">Corniche</string>
    <string name="Diamond_title">Diamond</string>
    <string name="Heinz_title">Heinz</string>
    <string name="Franks_title">Frank\'s RedHot</string>
    <string name="Franks_sweet_chili">Sweet Chili</string>
    <string name="Franks_buffalo">Buffalo</string>
    <string name="Franks_hot_buffalo">Hot Buffalo</string>
    <string name="Franks_sweet_heat">Sweet Heat</string>
    <string name="Franks_cayenne">Cayenne</string>
    <string name="Reynolds_title">Reynolds</string>
    <string name="Chateau_title">Chateau Premiere</string>
    <string name="DeRica_title">De Rica</string>
    <string name="Log_title">Log Cabin</string>
    <string name="Joe_title">Maple Joe</string>
    <string name="JW_title">J &amp; W</string>
    <string name="Sunny_title">Sunny Perfect</string>
    <string name="Lindsay_title">Lindsay</string>
    <string name="Cirio_title">Cirio</string>
    <string name="Cattlemen_title">Cattlemen\'s</string>
    <string name="French_title">French\'s Sauce</string>
    <string name="Vlasic_title">Vlasic</string>
    <string name="MaePloy_title">Mae Ploy</string>
    <string name="Costadoro_title">Costa d\'Oro</string>
</resources>