<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="65dp"
    android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonAB"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/buttonAB_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonBarilla"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Barilla_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonBertolli"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Bertolli_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonCattlemen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Cattlemen_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonChateau"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Chateau_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonCirio"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Cirio_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonCorniche"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Corniche_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonCostadoro"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Costadoro_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonDerica"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/DeRica_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonDiamond"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Diamond_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonFranks"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Franks_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonFrench"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/French_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonGryphon"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Gryphon_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonGoldenBridge"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/GoldenBridge_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonHeinz"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Heinz_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonJays"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Jays_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonJW"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/JW_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonLily"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Lily_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonLindsay"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Lindsay_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonLogCabin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Log_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonJoe"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Joe_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonMaePloy"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/MaePloy_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonReynolds"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Reynolds_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavis"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSpigadoro"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Spigadoro_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSunny"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Sunny_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonVlasic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Vlasic_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
</ScrollView>