<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/savisLooseAllContentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="65dp">
        <Button
            android:id="@+id/buttonSavisLooseFlowerBunaken"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_flower_bunaken"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseFlowerChamomile"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_flower_chamomile"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseHerbChocolate"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_herb_chocolate"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassicEarl"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_classic_earl"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseHerbExotic"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_herb_exotic"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseJapaneseMatcha"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_japanese_matcha"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseOrganicGreen"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_organic_green"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseOrganicOolong"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_organic_oolong"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseOrganicRed"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_organic_red"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassicJava"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_classic_java"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseHerbJava"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_herb_java"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassicJewel"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_classic_jewel"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromaticLemon"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_aromatic_lemongrass"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromaticMoroccan"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_aromatic_moroccan"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromaticPandanus"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_aromatic_pandanus"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseHerbPeppermint"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_herb_peppermint"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseFlowerRose"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_flower_rose"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromaticRoyal"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_aromatic_royal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromaticSekar"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_aromatic_sekar"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseFruitSenggigi"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_fruit_senggigi"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassicSilver"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_classic_silver"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassicSumatra"
            android:drawableStart="@drawable/ic_unknown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_loose_classic_sumatra"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
</ScrollView>