<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="65dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonSavisLooseAll"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_all_items"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseAromatic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_aromatic_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseClassic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_classic_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseFlower"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_flower_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseFruit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_fruit_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseHerb"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_herb_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseJapanese"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_japanese_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/buttonSavisLooseOrganic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/Savis_organic_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
    </LinearLayout>
</ScrollView>